# morp

./: .gitignore  README.md  docker-compose.yml  morp_test.py  pyproject.toml  setup.py
docs/: DEVELOPMENT.md  KMS.md
example/: recv.py  send.py
morp/: __init__.py  __main__.py  compat.py  config.py  decorators.py  exception.py  message.py  nsq.py  reflection.py
morp/extras/: message.py  testdata.py
morp/interface/: __init__.py  base.py  dropfile.py  nsq.py  postgres.py  sqs.py
tests/: __init__.py  config_test.py  extras_test.py  main_test.py  message_test.py  stress_test.py
tests/interface/: __init__.py  base_test.py  dropfile_test.py  postgres_test.py  sqs_test.py
