[project]
requires-python = ">=3.10"
name = "morp"
description = "Send and receive messages without thinking about it"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
# keywords = [
#   "messag"
# ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "dsnparse",
  "datatypes"
]
dynamic = [
  "version"
]
readme = "README.md"
license = "MIT"
license-files = [
  "LICENSE.txt"
]

[project.urls]
Homepage = "http://github.com/Jaymon/morp"
Repository = "https://github.com/Jaymon/morp"

[project.optional-dependencies]
tests = [
  "testdata"
]
postgres = [
  "psycopg"
]
sqs = [
  "boto3"
]
encryption = [
  "cryptography"
]

#[project.scripts]
#morp = "morp.__main__:console"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*",
  "*_test*",
  "docs*"
]

[tool.setuptools.dynamic]
version = { attr = "morp.__version__" }
